Ticket: #FT-771 SubTicket: # Component: Changes: 1.Fixed bug - Toolbars and grid are overlapped in Firefox.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/grid.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/grid.less
@@ -45,6 +45,7 @@
 
 .document-grid .iconrow {
 	margin: 3px 0;
+	display: flex;
 
 	&:after {
 		content: '';
